src/app/entry.module.css
.main {
  background-image: url("../assets/background.jpg");
  background-color: #78d6f0;
  background-size: contain;
  height: 100dvh;
  width: 1000dvw;
}

.main div {
  position: absolute;
}

.main img {
  height: 100%;
  width: 100%;
}

.angelfish {
  top: 25dvh;
  left: 620dvw;
  width: auto;
  height: 12rem;
}

.angelfish.animate {
  animation: angelfish 12s linear forwards;
}

@keyframes angelfish {
  12% {
    transform: translateY(20px);
  }

  25% {
    transform: translateY(10px);
  }

  37% {
    transform: translateY(15px);
  }

  50% {
    transform: translateY(5px);
  }

  100% {
    left: -50dvw;
    display: none;
  }
}

.barracuda {
  top: 35dvh;
  left: 950dvw;
}

.barracuda.animate {
  animation: linear-swim 22s linear forwards;
}

@keyframes linear-swim {
  100% {
    left: -50dvw;
    display: none;
  }
}

.blueTang {
  top: 25dvh;
  left: 210dvw;
  width: auto;
  height: 8rem;
}

.blueTang.animate {
  animation: blueTang 6s linear forwards;
}

@keyframes blueTang {
  12% {
    transform: rotate(-10deg);
  }

  25% {
    transform: rotate(0);
    top: 35dvh;
  }

  37% {
    transform: rotate(10deg);
  }

  50% {
    transform: rotate(0);
    top: 30dvh;
  }

  100% {
    left: -20dvh;
    display: none;
  }
}

.eagleRay {
  top: 50dvh;
  left: 460dvw;
  width: auto;
  height: 14rem;
}

.eagleRay.animate {
  animation: eagle-ray 8s linear forwards;
}

@keyframes eagle-ray {
  100% {
    transform: rotate(-10deg);
    top: 10dvh;
    left: 0;
    display: none;
  }
}

.eel {
  bottom: -1dvh;
  left: 520dvw;
  width: auto;
  height: 9rem;
}

.eel.animate {
  animation: eel 2.5s linear infinite;
}

@keyframes eel {
  50% {
    transform: translateX(50px) scale(1.2, 0.9);
  }

  100% {
    transform: translateX(0);
  }
}

.manatee {
  left: 250dvw;
  height: 10rem;
  width: auto;
  top: 64dvh;
}

.manatee.animate {
  animation: manatee 5s ease-in-out infinite;
}

@keyframes manatee {
  0% {
    transform: rotate(0);
  }

  25% {
    transform: rotate(5deg) translateY(15px);
  }

  50% {
    transform: rotate(0) translateY(0);
  }

  75% {
    transform: rotate(-5deg) translateY(15px);
  }

  100% {
    transform: rotate(0) translateY(0);
  }
}

.mantaRay {
  top: 15dvh;
  left: 820dvw;
  height: 10rem;
  width: auto;
}

.mantaRay.animate {
  animation: manta-ray 14s linear forwards;
}

@keyframes manta-ray {
  100% {
    transform: rotate(5deg);
    top: 40dvh;
    left: -50dvw;
    display: none;
  }
}

.nurseShark {
  top: 45dvh;
  left: 680dvw;
  width: auto;
  height: 10rem;
}

.nurseShark.animate {
  animation: linear-swim 23s linear forwards;
}

.parrotfish {
  top: 45dvh;
  left: 870dvw;
  width: auto;
  height: 7rem;
}

.parrotfish.animate {
  animation: linear-swim 12s linear forwards;
}

.seahorse {
  top: 10dvh;
  left: 900dvw;
  width: auto;
  height: 7rem;
}

.seahorse.animate {
  animation: seahorse 3s linear infinite;
}

@keyframes seahorse {
  0% {
    transform: translateY(0);
  }

  25% {
    transform: translateY(8px);
  }

  50% {
    transform: translateY(0);
  }

  75% {
    transform: translateY(-8px);
  }

  100% {
    transform: translateY(0);
  }
}

.starfish {
  bottom: 0.5dvh;
  left: 17dvh;
  height: 6rem;
  width: auto;
  position: relative;
}

.starfish.animate {
  animation: starfish 5s linear infinite;
}

@keyframes starfish {
  0% {
    transform: rotate(0);
  }

  25% {
    transform: rotate(5deg);
  }

  50% {
    transform: rotate(0);
  }

  75% {
    transform: rotate(-5deg);
  }

  100% {
    transform: rotate(0);
  }
}

.stingray {
  top: 55dvh;
  left: 140dvw;
  width: auto;
  height: 18rem;
}

.stingray.animate {
  animation: stingray 4s linear forwards;
}

@keyframes stingray {
  60% {
    top: 45dvh;
  }

  100% {
    top: 35dvh;
    left: -45dvh;
    display: none;
  }
}

.turtle {
  top: 50dvh;
  left: 380dvw;
  width: auto;
  height: 8rem;
}

.turtle.animate {
  animation: turtle 6s ease-in-out forwards;
}

@keyframes turtle {
  60% {
    transform: rotate(15deg);
    top: 20dvh;
  }

  100% {
    transform: rotate(5deg);
    top: 20dvh;
    left: -50dvw;
    display: none;
  }
}

